[package]
name = "iocore"
version = "2.1.2"
edition = "2021"
description = "I/O Core Utilities"
documentation = "https://docs.rs/iocore"
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/iocore"
license = "MIT"

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]

[features]
default = []

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
glob = "0.3.1"
lazy_static = "1.4.0"
sanitation = { version = "1.0.3" }
serde = { version = "1.0.219", features = ["derive"] }
regex = { version = "1.10.3", features = ["use_std"] }
thread-groups = { version = "0.1.2" }
filetime = "0.2.25"
trilobyte = { version = "0.1.2" }
shlex = "1.3.0"

[dev-dependencies]
clap = { version = "4.5.20", features = ["derive"] }
iocore-test = { path = "./iocore-test" }
serde_json = { version = "1.0.140" }

[lib]
name = "iocore"
path = "iocore/lib.rs"
