[package]
name = "iocore-test"
version = "0.1000.0"
edition = "2021"
autoexamples = false
autobenches = false
description = "companion testing library for the iocore crate"
documentation = "https://docs.rs/iocore-test"
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/iocore"
license = "MIT"

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps"]


[lib]
name = "iocore_test"
path = "iocore-test/lib.rs"
doctest = false
bench = false

[dependencies]
iocore = { path = ".." }
