[package]
name = "iocore-test"
version = "1.0.1"
edition = "2024"
autoexamples = false
autobenches = false
description = "companion testing library of the crate 'iocore'"
documentation = "https://docs.rs/iocore-test"
readme = "README.md"
homepage = "https://github.com/gabrielfalcao/iocore"
license = "MIT"

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]


[lib]
name = "iocore_test"
path = "iocore-test/lib.rs"
doctest = false
bench = false

[dependencies]
iocore = { version = "1.0.1" }
