[package]
name = "iocore"
description.workspace = true
documentation.workspace = true
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage = "https://github.com/gabrielfalcao/iocore/tree/main/crates/iocore"

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
glob = "0.3.1"
lazy_static = "1.4.0"
sanitation = { version = "1.0.3" }
serde = { version = "1.0.219", features = ["derive"] }
regex = { version = "1.10.3", features = ["use_std"] }
thread-groups = { version = "0.1.2" }
filetime = "0.2.25"
trilobyte = { version = "0.1.2" }
shlex = "1.3.0"
dumbeq = "0.1.1"

[dev-dependencies]
iocore-test = { workspace = true }
clap = { version = "4.5.20", features = ["derive"] }
serde_json = { version = "1.0.140" }

[lib]
name = "iocore"
path = "iocore/lib.rs"
