[package]
name = "iocore"
description.workspace = true
documentation.workspace = true
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage = "https://github.com/gabrielfalcao/iocore/tree/main/crates/iocore"

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]

[dependencies]
chrono = { workspace = true }
glob = { workspace = true }
lazy_static = { workspace = true }
sanitation = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
thread-groups = { workspace = true }
filetime = { workspace = true }
trilobyte = { workspace = true }
shlex = { workspace = true }
dumbeq = { workspace = true }

[dev-dependencies]
iocore-test = { workspace = true }
clap = { version = "4.5.20", features = ["derive"] }
serde_json = { version = "1.0.140" }

[lib]
name = "iocore"
path = "iocore/lib.rs"
